--- a/github-battle/package.json
+++ b/github-battle/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.39.0",
     "webpack-cli": "^3.3.6",
